--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -11,28 +11,28 @@
         android:id="@+id/header"
         android:layout_width="270dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="23dp"
+        android:layout_marginStart="@dimen/_15sdp"
+        android:layout_marginTop="@dimen/_18sdp"
         android:fontFamily="@font/nunito_black"
-        android:lineHeight="34dp"
+        android:lineHeight="@dimen/_27sdp"
         android:text="@string/home_header"
         android:textColor="#4B4B53"
-        android:textSize="28sp"
+        android:textSize="@dimen/_21ssp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints,RtlSymmetry,UnusedAttribute" />
 
     <TextView
         android:id="@+id/penjelasan"
-        android:layout_width="215dp"
+        android:layout_width="207dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="56dp"
-        android:layout_marginBottom="57dp"
+        android:layout_marginBottom="@dimen/_57sdp"
         android:fontFamily="@font/nunito"
         android:text="@string/home_sub_header"
         android:textColor="#4B4B53"
-        android:textSize="17sp"
+        android:textSize="@dimen/_14ssp"
         app:layout_constraintBottom_toTopOf="@+id/btn_mulai_diagnosa"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/header"
@@ -40,8 +40,8 @@
 
     <ImageView
         android:id="@+id/dokter"
-        android:layout_width="122dp"
-        android:layout_height="190dp"
+        android:layout_width="139dp"
+        android:layout_height="217dp"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="20dp"
         android:background="@drawable/img_doctor"
