--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -27,7 +27,7 @@
         android:layout_width="207dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="@dimen/_56sdp"
         android:layout_marginBottom="@dimen/_57sdp"
         android:fontFamily="@font/nunito"
         android:text="@string/home_sub_header"
@@ -36,6 +36,7 @@
         app:layout_constraintBottom_toTopOf="@+id/btn_mulai_diagnosa"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/header"
+        app:layout_constraintVertical_bias="0.59000003"
         tools:ignore="MissingConstraints,RtlSymmetry,UnusedAttribute" />
 
     <ImageView
