--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,13 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F0EFF2"
-    tools:context=".HomeActivity">
+    tools:context=".ui.HomeActivity">
 
     <TextView
         android:id="@+id/header"
-        android:layout_width="270dp"
+        android:layout_width="@dimen/_240sdp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_15sdp"
+        android:layout_marginStart="@dimen/_14sdp"
         android:layout_marginTop="@dimen/_18sdp"
         android:fontFamily="@font/nunito_black"
         android:lineHeight="@dimen/_27sdp"
@@ -22,35 +22,40 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints,RtlSymmetry,UnusedAttribute" />
 
-    <TextView
-        android:id="@+id/penjelasan"
-        android:layout_width="207dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="@dimen/_56sdp"
-        android:layout_marginBottom="@dimen/_57sdp"
-        android:fontFamily="@font/nunito"
-        android:text="@string/home_sub_header"
-        android:textColor="#4B4B53"
-        android:textSize="@dimen/_14ssp"
         app:layout_constraintBottom_toTopOf="@+id/btn_mulai_diagnosa"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/header"
-        app:layout_constraintVertical_bias="0.59000003"
-        tools:ignore="MissingConstraints,RtlSymmetry,UnusedAttribute" />
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="0dp">
 
-    <ImageView
-        android:id="@+id/dokter"
-        android:layout_width="139dp"
-        android:layout_height="217dp"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="20dp"
-        android:background="@drawable/img_doctor"
-        app:layout_constraintBottom_toTopOf="@+id/btn_mulai_diagnosa"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/header"
-        app:layout_constraintVertical_bias="0.411"
-        tools:ignore="ContentDescription" />
+        <TextView
+            android:id="@+id/penjelasan"
+            android:layout_width="@dimen/_159sdp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:fontFamily="@font/nunito"
+            android:text="@string/home_sub_header"
+            android:textColor="#4B4B53"
+            android:textSize="@dimen/_14sdp"
+            app:layout_constraintEnd_toStartOf="@+id/dokter"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="MissingConstraints,RtlSymmetry,UnusedAttribute" />
+
+        <ImageView
+            android:id="@+id/dokter"
+            android:layout_width="@dimen/_106sdp"
+            android:layout_height="@dimen/_168sdp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="20dp"
+            android:background="@drawable/img_doctor"
+            app:layout_constraintBottom_toBottomOf="@+id/penjelasan"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/penjelasan"
+            tools:ignore="ContentDescription" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
         android:id="@+id/btn_mulai_diagnosa"
@@ -61,7 +66,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="10dp"
-        android:background="@drawable/radius_primary_button"
+        android:background="@drawable/rounded_primary_button"
         android:fontFamily="@font/nunito_extrabold"
         android:onClick="btnMulaiDiagnosa"
         android:text="@string/home_btn_mulai_diagnosa"
@@ -82,7 +87,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="29dp"
-        android:background="@drawable/radius_secondary_button"
+        android:background="@drawable/rounded_secondary_button"
         android:fontFamily="@font/nunito_extrabold"
         android:text="@string/home_btn_hasil_sebelumnya"
         android:textAllCaps="false"
@@ -98,7 +103,7 @@
         android:id="@+id/constraintLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#FFF"
+        android:background="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -120,12 +125,13 @@
             tools:layout_editor_absoluteX="19dp" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/constraintLayout"
+            android:id="@+id/btn_data_covid"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
+            android:onClick="btnDataCovid"
             app:layout_constraintTop_toBottomOf="@+id/informasi_lain"
-            tools:ignore="MissingConstraints"
+            tools:ignore="MissingConstraints,OnClick"
             tools:layout_editor_absoluteX="16dp">
 
             <ImageView
@@ -185,13 +191,15 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/btn_tentang_covid"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:layout_marginBottom="33dp"
+            android:onClick="btnTentangCovid"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
-            tools:ignore="MissingConstraints"
+            app:layout_constraintTop_toBottomOf="@+id/btn_data_covid"
+            tools:ignore="MissingConstraints,OnClick"
             tools:layout_editor_absoluteX="16dp">
 
             <ImageView
