--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F0EFF2"
-    tools:context=".ResultActivity">
+    tools:context=".ui.ResultActivity">
 
     <TextView
         android:id="@+id/header"
@@ -157,7 +157,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="39dp"
-        android:background="@drawable/radius_primary_button"
+        android:background="@drawable/rounded_primary_button"
         android:fontFamily="@font/nunito_extrabold"
         android:onClick="btnBeranda"
         android:text="@string/result_home"
