--- a/app/src/main/res/drawable/rounded.xml
+++ b/app/src/main/res/drawable/rounded.xml
@@ -3,6 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     tools:ignore="ExtraText">
     <corners android:radius="15dp" />
-    <solid android:color="#545557" />
+    <solid android:color="@color/colorLightGrey" />
 
 </shape>
