--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -35,6 +35,7 @@
         android:textSize="@dimen/_14ssp"
         android:layout_marginBottom="@dimen/_8sdp"
         android:layout_marginTop="8dp"
+        android:layout_marginStart="@dimen/_16sdp"
         app:layout_constraintBottom_toTopOf="@+id/btn_mulai_diagnosa"
         app:layout_constraintEnd_toStartOf="@+id/dokter"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,12 +43,13 @@
 
     <ImageView
         android:id="@+id/dokter"
-        android:layout_width="139dp"
-        android:layout_height="217dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="20dp"
+        android:layout_margin="@dimen/_16sdp"
         android:background="@drawable/img_doctor"
         app:layout_constraintBottom_toTopOf="@+id/btn_mulai_diagnosa"
+        app:layout_constraintStart_toEndOf="@id/penjelasan"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/header"
         app:layout_constraintVertical_bias="0.411"
