--- a/app/src/main/res/layout/activity_previous_result.xml
+++ b/app/src/main/res/layout/activity_previous_result.xml
@@ -1,10 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
-    tools:context=".PreviousResultActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <data>
+
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#F0EFF2"
+        tools:context=".ui.previousresult.PreviousResultActivity">
+
+        <TextView
+            android:id="@+id/header"
+            android:layout_width="270dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="23dp"
+            android:fontFamily="@font/nunito_black"
+            android:lineHeight="34dp"
+            android:text="@string/previous_result_header"
+            android:textColor="#4B4B53"
+            android:textSize="28sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="MissingConstraints,RtlSymmetry,UnusedAttribute" />
+
+        <ListView
+                android:id="@+id/lv_diagnosa"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+            android:layout_margin="@dimen/_16sdp"
+                android:background="@drawable/radius_primary_button"
+                app:layout_constraintBottom_toTopOf="@+id/btn_beranda"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/header"
+                 />
+
+        <Button
+            android:id="@+id/btn_beranda"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="39dp"
+            android:background="@drawable/radius_primary_button"
+            android:fontFamily="@font/nunito_extrabold"
+            android:onClick="btnBeranda"
+            android:text="@string/result_home"
+            android:textAllCaps="false"
+            android:textColor="#DDEFF8"
+            android:textSize="17sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="MissingConstraints,OnClick" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
