--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F0EFF2"
-    tools:context=".ResultActivity">
+    tools:context=".ui.result.ResultActivity">
 
     <TextView
         android:id="@+id/header"
