--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -8,20 +8,18 @@
     tools:context=".SplashScreenActivity">
 
     <ImageView
-        android:id="@+id/splash_screen"
-        android:layout_width="210dp"
-        android:layout_height="210dp"
+        android:id="@+id/img_splash_screen"
+        android:layout_width="@dimen/_200sdp"
+        android:layout_height="@dimen/_150sdp"
         android:src="@drawable/splash_screen"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.499"
         tools:ignore="MissingConstraints,ContentDescription" />
 
     <TextView
-        android:id="@+id/copyright"
+        android:id="@+id/tv_copyright"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="205dp"
@@ -35,7 +33,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/splash_screen"
+        app:layout_constraintTop_toBottomOf="@+id/img_splash_screen"
         app:layout_constraintVertical_bias="1.0"
         tools:ignore="MissingConstraints" />
 
