--- a/app/src/main/res/drawable/ic_alert.xml
+++ b/app/src/main/res/drawable/ic_alert.xml
@@ -1,48 +1,15 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="512dp"
     android:height="512dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:viewportWidth="512"
+    android:viewportHeight="512">
   <path
-      android:pathData="m18,7c-0.256,0 -0.512,-0.098 -0.707,-0.293 -0.391,-0.391 -0.391,-1.023 0,-1.414l2.121,-2.121c0.391,-0.391 1.023,-0.391 1.414,0s0.391,1.023 0,1.414l-2.121,2.121c-0.195,0.195 -0.451,0.293 -0.707,0.293z"
-      android:fillColor="#ffc107"/>
+      android:pathData="M256,0C114.497,0 0,114.507 0,256C0,397.503 114.507,512 256,512C397.503,512 512,397.493 512,256C512,114.497 397.493,0 256,0ZM256,472C136.607,472 40,375.385 40,256C40,136.607 136.615,40 256,40C375.393,40 472,136.615 472,256C472,375.393 375.385,472 256,472Z"
+      android:fillColor="#CA3838"/>
   <path
-      android:pathData="m23,13h-1.25c-0.553,0 -1,-0.448 -1,-1s0.447,-1 1,-1h1.25c0.553,0 1,0.448 1,1s-0.447,1 -1,1z"
-      android:fillColor="#ffc107"/>
+      android:pathData="M256,128.877C244.954,128.877 236,137.831 236,148.877V277.67C236,288.716 244.954,297.67 256,297.67C267.046,297.67 276,288.716 276,277.67V148.877C276,137.831 267.046,128.877 256,128.877Z"
+      android:fillColor="#CA3838"/>
   <path
-      android:pathData="m18.25,19.5h-12.5c-0.414,0 -0.75,-0.336 -0.75,-0.75v-4.75c0,-3.86 3.141,-7 7,-7s7,3.14 7,7v4.75c0,0.414 -0.336,0.75 -0.75,0.75z"
-      android:fillColor="#f44336"/>
-  <path
-      android:pathData="m8,15c-0.553,0 -1,-0.448 -1,-1 0,-2.757 2.243,-5 5,-5 0.553,0 1,0.448 1,1s-0.447,1 -1,1c-1.654,0 -3,1.346 -3,3 0,0.552 -0.447,1 -1,1z"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="m12,5c-0.553,0 -1,-0.448 -1,-1v-3c0,-0.552 0.447,-1 1,-1s1,0.448 1,1v3c0,0.552 -0.447,1 -1,1z"
-      android:fillColor="#ffc107"/>
-  <path
-      android:pathData="m6,7c-0.256,0 -0.512,-0.098 -0.707,-0.293l-2.121,-2.121c-0.391,-0.391 -0.391,-1.023 0,-1.414s1.023,-0.391 1.414,0l2.121,2.121c0.391,0.391 0.391,1.023 0,1.414 -0.195,0.195 -0.451,0.293 -0.707,0.293z"
-      android:fillColor="#ffc107"/>
-  <path
-      android:pathData="m2,13h-1c-0.553,0 -1,-0.448 -1,-1s0.447,-1 1,-1h1c0.553,0 1,0.448 1,1s-0.447,1 -1,1z"
-      android:fillColor="#ffc107"/>
-  <path
-      android:pathData="m22.25,24h-20.5c-0.965,0 -1.75,-0.785 -1.75,-1.75v-2.5c0,-0.965 0.785,-1.75 1.75,-1.75h20.5c0.965,0 1.75,0.785 1.75,1.75v2.5c0,0.965 -0.785,1.75 -1.75,1.75z"
-      android:fillColor="#607d8b"/>
-  <path
-      android:pathData="m12,7c-3.859,0 -7,3.14 -7,7v4h7v-7c-1.654,0 -3,1.346 -3,3 0,0.552 -0.447,1 -1,1s-1,-0.448 -1,-1c0,-2.757 2.243,-5 5,-5z"
-      android:fillColor="#d43a2f"/>
-  <path
-      android:pathData="m12,9c-2.757,0 -5,2.243 -5,5 0,0.552 0.447,1 1,1s1,-0.448 1,-1c0,-1.654 1.346,-3 3,-3z"
-      android:fillColor="#dedede"/>
-  <path
-      android:pathData="m12,0c-0.553,0 -1,0.448 -1,1v3c0,0.552 0.447,1 1,1z"
-      android:fillColor="#dea806"/>
-  <path
-      android:pathData="m3.879,2.879c-0.256,0 -0.512,0.098 -0.707,0.293 -0.391,0.391 -0.391,1.023 0,1.414l2.121,2.121c0.195,0.195 0.451,0.293 0.707,0.293s0.512,-0.098 0.707,-0.293c0.391,-0.391 0.391,-1.023 0,-1.414l-2.121,-2.121c-0.195,-0.195 -0.451,-0.293 -0.707,-0.293z"
-      android:fillColor="#dea806"/>
-  <path
-      android:pathData="m2,11h-1c-0.553,0 -1,0.448 -1,1 0,0.552 0.447,1 1,1h1c0.553,0 1,-0.448 1,-1s-0.447,-1 -1,-1z"
-      android:fillColor="#dea806"/>
-  <path
-      android:pathData="m12,18h-7,-3.25c-0.965,0 -1.75,0.785 -1.75,1.75v2.5c0,0.965 0.785,1.75 1.75,1.75h10.25z"
-      android:fillColor="#546d79"/>
+      android:pathData="M256,376.16C270.912,376.16 283,364.072 283,349.16C283,334.248 270.912,322.16 256,322.16C241.088,322.16 229,334.248 229,349.16C229,364.072 241.088,376.16 256,376.16Z"
+      android:fillColor="#CA3838"/>
 </vector>
