--- a/app/src/main/res/drawable/radius_tertiary_button.xml
+++ b/app/src/main/res/drawable/radius_tertiary_button.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="#8FB3D8">
+    android:color="#A2BADD">
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="10dp" />
-            <solid android:color="#428CD4" />
+            <solid android:color="#FFFFFF" />
+            <stroke android:width="1dp"
+                android:color="#428CD4"/>
         </shape>
     </item>
 </ripple>
