--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -89,6 +89,8 @@
         android:background="#FFFFFF"
         android:fontFamily="@font/nunito_extrabold"
         android:gravity="center"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
         android:text="@string/result_keterangan"
         android:textColor="#4B4B53"
         android:textSize="22sp"
@@ -116,9 +118,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
+            android:layout_marginBottom="50dp"
             android:fontFamily="@font/nunito_extrabold"
             android:paddingTop="20dp"
-            android:layout_marginBottom="50dp"
             android:text="@string/result_header_saran_kami"
             android:textColor="#4B4B53"
             android:textSize="20sp"
