--- a/app/src/main/res/layout/activity_developer_profile.xml
+++ b/app/src/main/res/layout/activity_developer_profile.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F0EFF2"
-    tools:context=".ui.aboutcovid.AboutCovidActivity">
+    tools:context=".ui.developerprofile.DeveloperProfileActivity">
 
     <RadioGroup
         android:id="@+id/daily_weekly_button_view"
