--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -139,7 +139,7 @@
                 android:layout_height="46dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="22dp"
-                android:background="@drawable/ic_data"
+                android:background="@drawable/ic_covid"
                 app:layout_constraintStart_toStartOf="parent"
                 tools:ignore="MissingConstraints,contentDescription" />
 
@@ -150,7 +150,7 @@
                 android:layout_marginStart="82dp"
                 android:layout_marginTop="22dp"
                 android:fontFamily="@font/nunito_extrabold"
-                android:text="@string/home_data_covid_indonesia"
+                android:text="@string/home_tentang_covid"
                 android:textColor="#4B4B53"
                 android:textSize="17sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -167,7 +167,7 @@
                 android:layout_marginEnd="20dp"
                 android:fontFamily="@font/nunito"
                 android:paddingEnd="20dp"
-                android:text="@string/home_sub_dci"
+                android:text="@string/home_sub_tc"
                 android:textColor="#4B4B53"
                 android:textSize="17sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -205,7 +205,7 @@
                 android:layout_height="46dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="22dp"
-                android:background="@drawable/ic_covid"
+                android:background="@drawable/ic_developer"
                 app:layout_constraintStart_toStartOf="parent"
                 tools:ignore="MissingConstraints,contentDescription" />
 
@@ -216,7 +216,7 @@
                 android:layout_marginStart="82dp"
                 android:layout_marginTop="22dp"
                 android:fontFamily="@font/nunito_extrabold"
-                android:text="@string/home_tentang_covid"
+                android:text="@string/home_profil_developer"
                 android:textColor="#4B4B53"
                 android:textSize="17sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -233,7 +233,7 @@
                 android:layout_marginEnd="20dp"
                 android:fontFamily="@font/nunito"
                 android:paddingEnd="20dp"
-                android:text="@string/home_sub_tc"
+                android:text="@string/home_sub_pd"
                 android:textColor="#4B4B53"
                 android:textSize="17sp"
                 app:layout_constraintEnd_toEndOf="parent"
