--- a/app/src/main/res/layout/alert_dialog.xml
+++ b/app/src/main/res/layout/alert_dialog.xml
@@ -2,10 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:padding="@dimen/_16sdp"
-    android:layout_width="wrap_content"
+    android:padding="@dimen/_20sdp"
+    android:layout_width="370dp"
     android:layout_height="wrap_content"
-    android:background="#FFFFFF">
+    android:background="@drawable/radius_alert_dialog">
 
     <TextView
         android:id="@+id/textView"
@@ -16,7 +16,7 @@
         android:gravity="center"
         android:text="@string/start_diagnose_alert_dialog_header"
         android:textColor="#4B4B53"
-        android:textSize="@dimen/_18ssp"
+        android:textSize="@dimen/_16ssp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
@@ -39,7 +39,7 @@
         android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="8dp"
         android:fontFamily="@font/nunito"
         android:gravity="center"
         android:text="@string/start_diagnose_alert_dialog_sub_header"
@@ -63,8 +63,8 @@
         <Button
             android:id="@+id/btn_tidak"
             style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_width="0dp"
-            android:layout_height="52dp"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
             android:layout_marginEnd="17.5dp"
             android:layout_weight="1"
             android:background="@drawable/radius_tertiary_button"
@@ -76,8 +76,8 @@
         <Button
             android:id="@+id/btn_ya"
             style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_width="0dp"
-            android:layout_height="52dp"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
             android:layout_marginStart="17.5dp"
             android:layout_weight="1"
             android:background="@drawable/radius_primary_button"
