--- a/app/src/main/res/layout/activity_previous_result.xml
+++ b/app/src/main/res/layout/activity_previous_result.xml
@@ -29,16 +29,15 @@
             tools:ignore="MissingConstraints,RtlSymmetry,UnusedAttribute" />
 
         <ListView
-                android:id="@+id/lv_diagnosa"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
+            android:id="@+id/lv_diagnosa"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:layout_margin="@dimen/_16sdp"
-                android:background="@drawable/radius_primary_button"
-                app:layout_constraintBottom_toTopOf="@+id/btn_beranda"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/header"
-                 />
+            android:background="@drawable/radius_primary_button"
+            app:layout_constraintBottom_toTopOf="@+id/btn_beranda"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/header" />
 
         <Button
             android:id="@+id/btn_beranda"
